# ashwam-ml-ai-intern-saad-ilkal

./: DESIGN.md  README.md  README.txt  analyze_data.py  prd.MD  pyproject.toml  requirements.txt  test_invariants.py
ashwam_monitor/: cli.py  config.py  exceptions.py  logging_config.py  storage.py
ashwam_monitor/analytics/: __init__.py  advanced.py
ashwam_monitor/canary/: runner.py
ashwam_monitor/explainability/: __init__.py  clinician_view.py  pm_view.py  templates.py  user_view.py
ashwam_monitor/human_loop/: __init__.py  queue.py  workflow.py
ashwam_monitor/invariants/: __init__.py  contradiction_checker.py  definitions.py  evidence_checker.py  runner.py  schema_checker.py
ashwam_monitor/io/: loader.py  writer.py
ashwam_monitor/metrics/: comparator.py  extractors.py  statistical.py
ashwam_monitor/models/: enums.py  inputs.py  outputs.py
data/: journals.jsonl  parser_outputs_day0.jsonl  parser_outputs_day1.jsonl
data/canary/: gold.jsonl  journals.jsonl
data_hinglish/: journals.jsonl  parser_outputs_day0.jsonl  parser_outputs_day1.jsonl
data_hinglish/canary/: gold.jsonl
tests/: test_integration.py  test_invariants.py  test_metrics.py
