[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ashwam-monitor"
version = "1.0.0"
description = "production monitoring for ashwam journal parser"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0",
    "click>=8.0",
    "scipy>=1.10",
    "numpy>=1.24",
    "jinja2>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
ashwam-monitor = "ashwam_monitor.cli:cli"
